Fix white blocks in bounce on safari

--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -2,7 +2,11 @@
   margin: 0;
   padding: 0 ;
   box-sizing: border-box;
-  /* border: 3px solid black; */
+  
+  html, body {
+    background: linear-gradient(to right, #151515, #201111);
+    min-height: 100vh;
+  }
 }
 
 #root {
